spec/test/_test_case_archive/sample2/data-error/4/result.txt
do_test tecsgen /home/ykominami/repo/ns3-tecsgen/tecsgen/test_auto/spec/test_data2/sample2/data-error/4 error-4.idl
/home/ykominami/repo/ns3-tecsgen/tecsgen/test_auto/spec/test_data2/sample2/data-error/4 ~
##### tecsgen error-4.idl  #####
error-4.idl:3:2: error: G1016 syntax error near 'int32'
1 error
~
